--- a/genindex.html
+++ b/genindex.html
@@ -218,6 +218,14 @@
       <li><a href="server.html#channel_access.server.PV.unit">unit (channel_access.server.PV attribute)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="server.cas.html#channel_access.server.cas.PV.use_numpy">use_numpy (channel_access.server.cas.PV attribute)</a>
+
+      <ul>
+        <li><a href="server.html#channel_access.server.PV.use_numpy">(channel_access.server.PV attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
 </tr></table>
 
 <h2 id="V">V</h2>
